--- a/AminWeb/Web.config
+++ b/AminWeb/Web.config
@@ -26,6 +26,7 @@
       </system.Web>
   -->
 	<system.web>
+		<httpRuntime targetFramework="4.8" maxRequestLength="2147483600" executionTimeout="100000000"/>
 		<authentication mode="Forms">
 			<forms name="AminWeb" defaultUrl="/" loginUrl="/" timeout="43200"/>
 		</authentication>
@@ -36,7 +37,6 @@
 			</providers>
 		</roleManager>
 		<compilation debug="true" targetFramework="4.8"/>
-		<httpRuntime targetFramework="4.8"/>
 
 		<!--errorPage-->
 		<customErrors mode="On" defaultRedirect="error.html">
@@ -46,6 +46,11 @@
 
 	</system.web>
 	<system.webServer>
+		<security>
+			<requestFiltering>
+				<requestLimits maxAllowedContentLength="3000000000"/>
+			</requestFiltering>
+		</security>
 		<!--errorPage-->
 		<!--<httpErrors errorMode="DetailedLocalOnly" defaultPath="fallback.html" defaultResponseMode="ExecuteURL">
 			<remove statusCode="404" subStatusCode="-1" />
