--- a/AminWeb/AminWeb.csproj
+++ b/AminWeb/AminWeb.csproj
@@ -2046,6 +2046,8 @@
     <Content Include="Views\Video\ListVideos.cshtml" />
     <Content Include="Views\PlayList\ListPlayList.cshtml" />
     <Content Include="Views\Shared\_HeaderProfile.cshtml" />
+    <Content Include="Views\Video\CheckUserSaveVideo.cshtml" />
+    <Content Include="Views\Video\LikeCount.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
