--- a/AminWeb/AminWeb.csproj
+++ b/AminWeb/AminWeb.csproj
@@ -147,6 +147,8 @@
     <Compile Include="Controllers\ManageEmailsController.cs" />
     <Compile Include="Controllers\PlayListController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
+    <Compile Include="Controllers\ShopCartController.cs" />
+    <Compile Include="Controllers\UploadImageController.cs" />
     <Compile Include="Controllers\VideoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -3177,7 +3179,8 @@
     <Content Include="Views\Shared\_HeaderProfile.cshtml" />
     <Content Include="Views\Video\CheckUserSaveVideo.cshtml" />
     <Content Include="Views\Video\LikeCount.cshtml" />
-    <Content Include="Views\ShopCart\Purchase.cshtml" />
+    <Content Include="Views\ShopCart\Index.cshtml" />
+    <Content Include="Views\ShopCart\PurchaseResult.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
