--- a/AminWeb/Web.config
+++ b/AminWeb/Web.config
@@ -14,7 +14,6 @@
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 		 <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"></add>  
-
 		<add key="MyDomain" value="https://localhost:44316" />
 	</appSettings>
 	<!--
@@ -126,4 +125,20 @@
 			</authorization>
 		</system.web>
 	</location>-->
+ <system.serviceModel>
+  <bindings>
+   <basicHttpBinding>
+    <binding name="PaymentGatewayImplementationServiceBinding">
+     <security mode="Transport" />
+    </binding>
+    <binding name="PaymentGatewayImplementationServiceBinding1" />
+   </basicHttpBinding>
+  </bindings>
+  <client>
+   <endpoint address="https://sandbox.zarinpal.com/pg/services/WebGate/service"
+    binding="basicHttpBinding" bindingConfiguration="PaymentGatewayImplementationServiceBinding"
+    contract="ZarinPalTest.PaymentGatewayImplementationServicePortType"
+    name="PaymentGatewayImplementationServicePort" />
+  </client>
+ </system.serviceModel>
 </configuration>
