--- a/AminWeb/AminWeb.csproj
+++ b/AminWeb/AminWeb.csproj
@@ -1810,6 +1810,8 @@
     </Content>
     <Content Include="Areas\User\Views\Library\Purchased.cshtml" />
     <Content Include="Areas\Admin\Views\User\UserList.cshtml" />
+    <Content Include="Areas\Admin\Views\Video\Report.cshtml" />
+    <Content Include="Areas\Admin\Views\Video\ListReport.cshtml" />
     <None Include="Connected Services\ZarinPalTest\configuration91.svcinfo" />
     <None Include="Connected Services\ZarinPalTest\configuration.svcinfo" />
     <None Include="Connected Services\ZarinPalTest\Reference.svcmap">
