--- a/AminWeb/Web.config
+++ b/AminWeb/Web.config
@@ -117,14 +117,14 @@
 		</system.web>
 	</location>
 
-	<!--<location path="admin">
+	<location path="admin">
 		<system.web>
 			<authorization>
 				<allow roles="admin"/>
 				<deny users="*"/>
 			</authorization>
 		</system.web>
-	</location>-->
+	</location>
  <system.serviceModel>
   <bindings>
    <basicHttpBinding>
