--- a/AminWeb/Web.config
+++ b/AminWeb/Web.config
@@ -13,7 +13,7 @@
 		<add key="webpages:Enabled" value="false" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		 <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"></add>  
+		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None"></add>
 		<add key="MyDomain" value="https://localhost:44316" />
 	</appSettings>
 	<!--
@@ -99,9 +99,12 @@
 	<!--<connectionStrings>
     <add name="AminWebEntities" connectionString="metadata=res://*/Models.AminWeb.csdl|res://*/Models.AminWeb.ssdl|res://*/Models.AminWeb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=109.169.76.79;initial catalog=arvintav_AminWeb;user id=arvintav_Root;password=1710ahmad.fard;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>-->
+
 	<connectionStrings>
-		<add name="AminWebEntities" connectionString="metadata=res://*/Models.AminWeb.csdl|res://*/Models.AminWeb.ssdl|res://*/Models.AminWeb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.216.62.27;initial catalog=AminWeb;user id=Yanal;password=1710ahmad.fard;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="AminWebEntities" connectionString="metadata=res://*/Models.AminWebEntities.csdl|res://*/Models.AminWebEntities.ssdl|res://*/Models.AminWebEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.216.62.27;initial catalog=AminWeb;user id=Yanal;password=1710ahmad.fard;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
+
+
 	<system.codedom>
 		<compilers>
 			<compiler extension=".cs" language="c#;cs;csharp" warningLevel="4" compilerOptions="/langversion:7.3 /nowarn:1659;1699;1701;612;618" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
@@ -125,20 +128,20 @@
 			</authorization>
 		</system.web>
 	</location>-->
- <system.serviceModel>
-  <bindings>
-   <basicHttpBinding>
-    <binding name="PaymentGatewayImplementationServiceBinding">
-     <security mode="Transport" />
-    </binding>
-    <binding name="PaymentGatewayImplementationServiceBinding1" />
-   </basicHttpBinding>
-  </bindings>
-  <client>
-   <endpoint address="https://sandbox.zarinpal.com/pg/services/WebGate/service"
-    binding="basicHttpBinding" bindingConfiguration="PaymentGatewayImplementationServiceBinding"
-    contract="ZarinPalTest.PaymentGatewayImplementationServicePortType"
-    name="PaymentGatewayImplementationServicePort" />
-  </client>
- </system.serviceModel>
+	<system.serviceModel>
+		<bindings>
+			<basicHttpBinding>
+				<binding name="PaymentGatewayImplementationServiceBinding">
+					<security mode="Transport" />
+				</binding>
+				<binding name="PaymentGatewayImplementationServiceBinding1" />
+			</basicHttpBinding>
+		</bindings>
+		<client>
+			<endpoint address="https://sandbox.zarinpal.com/pg/services/WebGate/service"
+			 binding="basicHttpBinding" bindingConfiguration="PaymentGatewayImplementationServiceBinding"
+			 contract="ZarinPalTest.PaymentGatewayImplementationServicePortType"
+			 name="PaymentGatewayImplementationServicePort" />
+		</client>
+	</system.serviceModel>
 </configuration>
