--- a/DataLayer/DataLayer.csproj
+++ b/DataLayer/DataLayer.csproj
@@ -76,68 +76,68 @@
     <Compile Include="MetaData\MdVideo.cs" />
     <Compile Include="MetaData\MdVideoPlaylistKeyword.cs" />
     <Compile Include="MetaData\MdWithdraw.cs" />
-    <Compile Include="Models\AminWeb.Context.cs">
+    <Compile Include="Models\AminWebEntities.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>AminWeb.Context.tt</DependentUpon>
+      <DependentUpon>AminWebEntities.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\AminWeb.cs">
+    <Compile Include="Models\AminWebEntities.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>AminWeb.tt</DependentUpon>
+      <DependentUpon>AminWebEntities.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\AminWeb.Designer.cs">
+    <Compile Include="Models\AminWebEntities.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>AminWeb.edmx</DependentUpon>
+      <DependentUpon>AminWebEntities.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\sysdiagrams.cs">
-      <DependentUpon>AminWeb.tt</DependentUpon>
+      <DependentUpon>AminWebEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TblCatagory.cs">
-      <DependentUpon>AminWeb.tt</DependentUpon>
+      <DependentUpon>AminWebEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TblChat.cs">
-      <DependentUpon>AminWeb.tt</DependentUpon>
+      <DependentUpon>AminWebEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TblConfig.cs">
-      <DependentUpon>AminWeb.tt</DependentUpon>
+      <DependentUpon>AminWebEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TblDoc.cs">
-      <DependentUpon>AminWeb.tt</DependentUpon>
+      <DependentUpon>AminWebEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TblLog.cs">
-      <DependentUpon>AminWeb.tt</DependentUpon>
+      <DependentUpon>AminWebEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TblPlaylist.cs">
-      <DependentUpon>AminWeb.tt</DependentUpon>
+      <DependentUpon>AminWebEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TblReport.cs">
-      <DependentUpon>AminWeb.tt</DependentUpon>
+      <DependentUpon>AminWebEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TblRole.cs">
-      <DependentUpon>AminWeb.tt</DependentUpon>
+      <DependentUpon>AminWebEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TblTicket.cs">
-      <DependentUpon>AminWeb.tt</DependentUpon>
+      <DependentUpon>AminWebEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TblUser.cs">
-      <DependentUpon>AminWeb.tt</DependentUpon>
+      <DependentUpon>AminWebEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TblUserPlaylistRel.cs">
-      <DependentUpon>AminWeb.tt</DependentUpon>
+      <DependentUpon>AminWebEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TblUserVideoRel.cs">
-      <DependentUpon>AminWeb.tt</DependentUpon>
+      <DependentUpon>AminWebEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TblVideo.cs">
-      <DependentUpon>AminWeb.tt</DependentUpon>
+      <DependentUpon>AminWebEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TblVideoPlaylistKeyword.cs">
-      <DependentUpon>AminWeb.tt</DependentUpon>
+      <DependentUpon>AminWebEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TblWithdraw.cs">
-      <DependentUpon>AminWeb.tt</DependentUpon>
+      <DependentUpon>AminWebEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IMainRepo.cs" />
@@ -145,6 +145,7 @@
     <Compile Include="Services\Heart.cs" />
     <Compile Include="ViewModels\VmActive.cs" />
     <Compile Include="ViewModels\VmChangePassword.cs" />
+    <Compile Include="ViewModels\VmChargeBalance.cs" />
     <Compile Include="ViewModels\VmChatUsers.cs" />
     <Compile Include="ViewModels\VmEditInfo.cs" />
     <Compile Include="ViewModels\VmForgetPassword.cs" />
@@ -152,18 +153,19 @@
     <Compile Include="ViewModels\VmRegister.cs" />
     <Compile Include="ViewModels\VmShopCart.cs" />
     <Compile Include="ViewModels\VmVideoView.cs" />
+    <Compile Include="ViewModels\VmWallet.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Classes\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
-    <EntityDeploy Include="Models\AminWeb.edmx">
+    <EntityDeploy Include="Models\AminWebEntities.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>AminWeb.Designer.cs</LastGenOutput>
+      <LastGenOutput>AminWebEntities.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="Models\AminWeb.edmx.diagram">
-      <DependentUpon>AminWeb.edmx</DependentUpon>
+    <None Include="Models\AminWebEntities.edmx.diagram">
+      <DependentUpon>AminWebEntities.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
@@ -171,15 +173,15 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Models\AminWeb.Context.tt">
+    <Content Include="Models\AminWebEntities.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>AminWeb.edmx</DependentUpon>
-      <LastGenOutput>AminWeb.Context.cs</LastGenOutput>
+      <DependentUpon>AminWebEntities.edmx</DependentUpon>
+      <LastGenOutput>AminWebEntities.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Models\AminWeb.tt">
+    <Content Include="Models\AminWebEntities.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>AminWeb.edmx</DependentUpon>
-      <LastGenOutput>AminWeb.cs</LastGenOutput>
+      <DependentUpon>AminWebEntities.edmx</DependentUpon>
+      <LastGenOutput>AminWebEntities.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
