--- a/AminWeb/AminWeb.csproj
+++ b/AminWeb/AminWeb.csproj
@@ -3214,7 +3214,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Rules.cshtml" />
     <Content Include="Views\Account\ForgetPassword.cshtml" />
-    <Content Include="Views\Account\ChangePassword.cshtml" />
+    <Content Include="Views\Account\RecoveryPassword.cshtml" />
     <Content Include="Views\Video\VideoView.cshtml" />
     <Content Include="Views\Shared\_Playlist.cshtml" />
     <Content Include="Views\Profile\Dashboard.cshtml" />
@@ -3239,6 +3239,7 @@
     <Content Include="Views\ShopCart\VerifyBalance.cshtml" />
     <Content Include="Views\ShopCart\Verify.cshtml" />
     <Content Include="Views\ShopCart\ChargeBalanceVerify.cshtml" />
+    <Content Include="Views\Video\Chat.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
