--- a/AminWeb/AminWeb.csproj
+++ b/AminWeb/AminWeb.csproj
@@ -3241,6 +3241,8 @@
     <Content Include="Views\ShopCart\Verify.cshtml" />
     <Content Include="Views\ShopCart\ChargeBalanceVerify.cshtml" />
     <Content Include="Views\Video\Chat.cshtml" />
+    <Content Include="Views\Shared\_PlaylistPriceVideo.cshtml" />
+    <Content Include="Views\Shared\_VideoBlockPriceVideo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
