--- a/AminWeb/AminWeb.csproj
+++ b/AminWeb/AminWeb.csproj
@@ -3197,6 +3197,7 @@
     <Content Include="Scripts\modal.js" />
     <Content Include="Scripts\Model.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\UIScripts\CopyToClipboard.js" />
     <Content Include="sw.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
