--- a/AminWeb/Web.config
+++ b/AminWeb/Web.config
@@ -51,10 +51,10 @@
 			</requestFiltering>
 		</security>
 		<!--errorPage-->
-		<!--<httpErrors errorMode="DetailedLocalOnly" defaultPath="fallback.html" defaultResponseMode="ExecuteURL">
+		<httpErrors errorMode="DetailedLocalOnly" defaultPath="fallback.html" defaultResponseMode="ExecuteURL">
 			<remove statusCode="404" subStatusCode="-1" />
 			<error statusCode="404" prefixLanguageFilePath="" path="fallback.html" responseMode="ExecuteURL" />
-		</httpErrors>-->
+		</httpErrors>
 		<!--errorPage-->
 	</system.webServer>
 
