--- a/AminWeb/Views/Web.config
+++ b/AminWeb/Views/Web.config
@@ -40,4 +40,7 @@
       </assemblies>
     </compilation>
   </system.web>
+  <connectionStrings>
+    <add name="daaneshsaraEntities" connectionString="metadata=res://*/Models.AminWebContext.csdl|res://*/Models.AminWebContext.ssdl|res://*/Models.AminWebContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=185.55.224.117;initial catalog=daaneshs_daaneshsara;user id=daaneshs_yanal;password=*Ww4o7y1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
