--- a/AminWeb/Web.config
+++ b/AminWeb/Web.config
@@ -99,10 +99,9 @@
 	<!--<connectionStrings>
     <add name="AminWebEntities" connectionString="metadata=res://*/Models.AminWeb.csdl|res://*/Models.AminWeb.ssdl|res://*/Models.AminWeb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=109.169.76.79;initial catalog=arvintav_AminWeb;user id=arvintav_Root;password=1710ahmad.fard;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>-->
-
-	<connectionStrings>
-		<add name="AminWebEntities" connectionString="metadata=res://*/Models.AminWebEntities.csdl|res://*/Models.AminWebEntities.ssdl|res://*/Models.AminWebEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.216.62.27;initial catalog=AminWeb;user id=Yanal;password=1710ahmad.fard;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings>
+  <connectionStrings>
+    <add name="daaneshsaraEntities" connectionString="metadata=res://*/Models.AminWebContext.csdl|res://*/Models.AminWebContext.ssdl|res://*/Models.AminWebContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=185.55.224.117;initial catalog=daaneshs_daaneshsara;user id=daaneshs_yanal;password=*Ww4o7y1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 
 
 	<system.codedom>
