--- a/DataLayer/App.Config
+++ b/DataLayer/App.Config
@@ -15,8 +15,4 @@
 	
 	<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" /></startup>
 
-
-
-<connectionStrings><add name="AminWebEntities" connectionString="metadata=res://*/Models.AminWebEntities.csdl|res://*/Models.AminWebEntities.ssdl|res://*/Models.AminWebEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=103.216.62.27;initial catalog=AminWeb;user id=Yanal;password=1710ahmad.fard;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
-
-</configuration>
+<connectionStrings><add name="daaneshsaraEntities" connectionString="metadata=res://*/Models.AminWebContext.csdl|res://*/Models.AminWebContext.ssdl|res://*/Models.AminWebContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=185.55.224.120;initial catalog=daaneshs_test;user id=daaneshs_test;password=T~a80nz2;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
