--- a/AminWeb/Web.config
+++ b/AminWeb/Web.config
@@ -14,7 +14,8 @@
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None"></add>
-		<add key="MyDomain" value="https://localhost:44316" />
+		<!--<add key="MyDomain" value="https://localhost:44316" />-->
+		<add key="MyDomain" value="https://daaneshsara.com/" />
 	</appSettings>
 	<!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
